--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <hr>
   <form action="#" method="post"> 
     <!-- //value of action may be "index.php" -->
-    <input type="text" name="title" placeholder="Title">
+    <input type="text" class="title" name="title" placeholder="Title">
     <br>
-    <input type="text" name="author" placeholder="Author">
+    <input type="text" class="author" name="author" placeholder="Author">
     <br>
     <input type="submit" value="Add Book">
   </form>
