--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,25 @@
   <title>Awesome Books</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <h1 class="pageHeader">Awesome Books</h1>
-  <div class="book">
-    <h4 class="title">Lorem, ipsum.</h4>
-    <h4 class="author">Lorem, ipsum.</h4>
-    <button type="button" class="book rm">Remove</button>
+  <div id="bookList" class="bookList">
+    <div id="book" class="book">
+    </div>
   </div>
-  <hr>
-  <div class="book">
-    <h4 class="title">Lorem, ipsum.</h4>
-    <h4 class="author">Lorem, ipsum.</h4>
-    <button type="button" class="book rm">Remove</button>
-  </div>
-  <hr>
-  <form action="#" method="post"> 
+
+  
+  <div>
     <!-- //value of action may be "index.php" -->
-    <input type="text" class="title" name="title" placeholder="Title">
+    <input type="text" id="title" class="title" name="title" placeholder="Title">
     <br>
-    <input type="text" class="author" name="author" placeholder="Author">
+    <input type="text" id="author" class="author" name="author" placeholder="Author">
     <br>
-    <input type="submit" value="Add Book">
-  </form>
+    <input type="button" id="addBook" value="Add Book">
+  </div>
+  <script src="index.js"></script>
   <script src="app.js"></script>
 </body>
+
 </html>
