--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <br>
     <input type="button" id="addBook" value="Add Book">
   </div>
-  <script src="index.js"></script>
-  <script src="app.js"></script>
+  <script src="index.js" ></script>
+  <script src="app.js" type="module"></script>
 </body>
 
 </html>
