--- a/index.html
+++ b/index.html
@@ -11,22 +11,15 @@
 
 <body>
   <h1 class="pageHeader">Awesome Books</h1>
-  <div id="bookList" class="bookList">
-    <div id="book" class="book">
-    </div>
-  </div>
-
-  
-  <div>
-    <!-- //value of action may be "index.php" -->
+  <div id="bookList" class="bookList"></div>
+  <form action="logic.js">
     <input type="text" id="title" class="title" name="title" placeholder="Title">
     <br>
     <input type="text" id="author" class="author" name="author" placeholder="Author">
     <br>
-    <input type="button" id="addBook" value="Add Book">
-  </div>
+    <button type="button" id="addBook" value="">Add Book</button>
+  </form>
   <script src="index.js" ></script>
-  <script src="app.js" type="module"></script>
 </body>
 
 </html>
