--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body>
   <h1 class="pageHeader">Awesome Books</h1>
   <div id="bookList" class="bookList"></div>
-  <form action="logic.js">
+  <form id="form">
     <input type="text" id="title" class="title" name="title" placeholder="Title">
     <br>
     <input type="text" id="author" class="author" name="author" placeholder="Author">
     <br>
-    <button type="button" id="addBook" value="">Add Book</button>
+    <input type="submit" id="addBook" value="Add Book"></button>
   </form>
-  <script src="index.js" ></script>
+  <div id="error" class="error">Please fill all fields</div>
+  <!-- <script src="index.js" ></script> -->
+  <script src="logic.js" ></script>
 </body>
 
 </html>
