--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>
     <input type="text" id="author" class="author" name="author" placeholder="Author">
     <br>
-    <input type="submit" id="addBook" value="Add Book"></button>
+    <input type="submit" id="addBook" value="Add Book">
   </form>
   <div id="error" class="error">Please fill all fields</div>
   <!-- <script src="index.js" ></script> -->
