--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 <body>
   <h1 class="pageHeader">Awesome Books</h1>
   <div id="bookList" class="bookList"></div>
+  <span class="line"></span>
+<h2 class="formHeader">Add a New book</h2>
   <form id="form">
     <input type="text" id="title" class="title" name="title" placeholder="Title">
     <br>
     <input type="text" id="author" class="author" name="author" placeholder="Author">
     <br>
-    <input type="submit" id="addBook" value="Add Book">
+    <input type="submit" id="addBook" class="bookAdd" value="Add">
   </form>
   <div id="error" class="error">Please fill all fields</div>
-  <!-- <script src="index.js" ></script> -->
   <script src="logic.js" ></script>
 </body>
 
