--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Awesome Books</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Awesome Books</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1 class="pageHeader">Awesome Books</h1>
-  <div id="bookList" class="bookList"></div>
-  <span class="line"></span>
-<h2 class="formHeader">Add a New book</h2>
-  <form id="form">
-    <input type="text" id="title" class="title" name="title" placeholder="Title">
-    <br>
-    <input type="text" id="author" class="author" name="author" placeholder="Author">
-    <br>
-    <input type="submit" id="addBook" class="bookAdd" value="Add">
-  </form>
-  <div id="error" class="error">Please fill all fields</div>
-  <script src="logic.js" ></script>
+    <h2>All awesome books</h2>
+    <div class="all-books">
+    </div>
+    <h2 class="form-title">Add a new book
+    </h2>
+    <form class="form">
+      <input type="text" name="title" placeholder="Title" required />
+      <input type="text" name="author" placeholder="Author" required />
+      <button type="submit">Add</button>
+    </form>
+    <script src='logic.js'></script>
 </body>
 
 </html>
