--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <nav class="topnav">
       <h1><a href="#" class="logo">Awesome Books</a></h1>
       <ul class="menu">
-        <li class="#">List</li>
+        <li class="list">List</li>
         <li><hr></li>
-        <li class="#">Add new</li>
+        <li class="addNew">Add new</li>
         <li><hr></li>
-        <li class="#">Contact</li>
+        <li class="contact">Contact</li>
       </ul>
     </nav>
     <div class="date">placeholder</div>
