Add contact section

--- a/index.html
+++ b/index.html
@@ -15,25 +15,42 @@
       <h1><a href="#" class="logo">Awesome Books</a></h1>
       <ul class="menu">
         <li class="list">List</li>
-        <li><hr></li>
+        <li>
+          <hr>
+        </li>
         <li class="addNew">Add new</li>
-        <li><hr></li>
+        <li>
+          <hr>
+        </li>
         <li class="contact">Contact</li>
       </ul>
     </nav>
     <div class="date">placeholder</div>
   </header>
   <main class="main">
-    <h2>All awesome books</h2>
-    <div class="all-books">
-    </div>
-    <h2 class="form-title">Add a new book
-    </h2>
-    <form class="form">
+    <section class="listSection" id="listSection">
+      <h2>All awesome books</h2>
+      <div class="all-books">
+      </div>
+    </section>
+    <form class="form" id="form">
+      <h2 class="form-title">Add a new book
+      </h2>
       <input type="text" name="title" placeholder="Title" required />
       <input type="text" name="author" placeholder="Author" required />
       <button type="submit">Add</button>
     </form>
+    <section class="contact" id="contact">
+      <h2 class="contact-title">Contact Information</h2>
+      <p class="contact-text">
+        Do you have any questions or comments? Maybe you want to say hello? <br> Send us a message!
+      </p>
+<ul class="contactInfo">
+<li class="contactItem">Our Email: mail@mail.com</li>
+<li class="contactItem">Our Phone Number: +15555222999</li>
+<li class="contactItem">Our address: StreetName 1234, 90210 City, State, Country</li>
+</ul>
+    </section>
   </main>
   <footer class="footer">
     <p class="CopyRight">&copy; 2020 Awesome Books</p>
