--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li class="contact">Contact</li>
       </ul>
     </nav>
-    <div class="date">placeholder</div>
+    <div id="date">placeholder</div>
   </header>
   <main class="main">
     <section class="listSection" id="listSection">
