Refactor css & html files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </section>
 
-    <form class="form" id="form">
+    <form class="form hidden" id="form">
       <h2 class="form-title">Add a new book
       </h2>
       <input type="text" name="title" placeholder="Title" required />
@@ -43,7 +43,7 @@
       <button type="submit">Add</button>
     </form>
 
-    <section class="contact" id="contact">
+    <section class="contactSection hidden" id="contactSection">
       <h2 class="contact-title">Contact Information</h2>
       <p class="contact-text">
         Do you have any questions or comments? Maybe you want to say hello? <br> Send us a message!
@@ -57,7 +57,7 @@
   </main>
 
   <footer class="footer">
-    <p class="CopyRight">&copy; 2020 Awesome Books</p>
+    <p class="CopyRight"> Awesome Books &copy; 2022</p>
   </footer>
   
   <script src='logic.js'></script>
